--- a/synergos_ui/Dockerfile.dev
+++ b/synergos_ui/Dockerfile.dev
@@ -1,10 +1,11 @@
-FROM node:14
+FROM node:14.16-buster-slim
 
-RUN yarn global add @vue/cli@4.5.11
+#RUN yarn global add @vue/cli@4.5.11
+#RUN npm install
 
 WORKDIR /app
 COPY package*.json ./
-RUN yarn install
+RUN npm install
 COPY . .
 
 EXPOSE 8080
