--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -58,7 +58,8 @@ http {
 
         location / {
             # Define the location of the proxy server to send the request to
-            proxy_pass http://docker.for.mac.localhost:8080/;
+            # proxy_pass http://docker.for.mac.localhost:8080/;
+            proxy_pass http://localhost:8080/;
         }
 
         location /mlflow {
@@ -71,7 +72,9 @@ http {
             proxy_buffering  off;
             rewrite ^/mlflow$ /mlflow/ permanent;
             rewrite          ^/mlflow/(.*)$  /$1  break;
-            proxy_pass       http://docker.for.mac.localhost:15000/;
+            # proxy_pass       http://docker.for.mac.localhost:15000/;
+            proxy_pass       http://localhost:15000/;
+
         }
 
 #        location /rabbitmq/api/ {
