--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "synergos_ui_nav/synergos_archive"]
 	path = synergos_ui_nav/synergos_archive
 	url = https://gitlab.int.aisingapore.org/aims/federatedlearning/synergos_archive.git
+[submodule "synergos"]
+	path = synergos
+	url = https://gitlab.int.aisingapore.org/aims/federatedlearning/synergos.git
