--- a/Dockerfile-mlflow.dev
+++ b/Dockerfile-mlflow.dev
@@ -1,9 +1,11 @@
-FROM python:3.7-slim-buster
+##############
+# Base Image #
+##############
+
+FROM python:3.7.4-slim-buster as base
+
 RUN pip install mlflow
 
 EXPOSE 5000
 
 CMD mlflow ui --backend-store-uri /tmp/project --host 0.0.0.0
-
-
-
