--- a/synui_view/Dockerfile_view
+++ b/synui_view/Dockerfile_view
@@ -14,14 +14,13 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
 RUN pip install --upgrade pip \
  && pip install --upgrade setuptools wheel
 
-RUN pip install ./synergos
-
+ADD ./synergos /src/synergos
 ADD ./synui_view /src
 WORKDIR /src
-RUN pip install -r ./synui_view/requirements.txt
 
-RUN ls /src
+RUN pip install /src/synergos
+RUN pip install -r ./requirements.txt
 
-EXPOSE 3000
+EXPOSE 4000
 
-ENTRYPOINT ["streamlit", "run", "--server.port", "3000", "./app.py"]
+ENTRYPOINT ["streamlit", "run", "--server.port", "4000", "./app.py"]
